feat: add recipe descriptions

--- a/recipes/caesar-salad.html
+++ b/recipes/caesar-salad.html
@@ -11,6 +11,10 @@
 <body>
     <h1>Caesar salad</h1>
     <img src="../images/caesar-salad.jpg" alt="A delicious Caesar Salad">
+    
+    <h2>Description</h2>
+    <p>A classic Caesar salad. Crisp romaine lettuce, Parmesan cheese, and croutons are tossed in a creamy homemade Caesar dressing. Add anchovies for a more authentic flavor!</p>
+    
     <h2>Ingredients</h2>
     <ul>
         <li>1 head romaine lettuce, washed and chopped</li>
