--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -11,6 +11,10 @@
 <body>
     <h1>Pancakes</h1>
     <img src="../images/pancakes.webp" alt="A stack of delicious pancakes">
+
+    <h2>Description</h2>
+    <p>These pancakes are light, airy, and perfect for a weekend breakfast. Top with your favorite syrup, fruit, or whipped cream for a delightful treat!</p>
+    
     <h2>Ingredients</h2>
     <ul>
         <li>1 1/2 cups all-purpose flour</li>
