--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,6 +11,10 @@
 <body>
     <h1>Lasagna</h1>
     <img src="../images/lasagna.jpg" alt="A delicious lasagna">
+
+    <h2>Description</h2>
+    <p>Layers of noodles, rich meat sauce, creamy ricotta, and melted mozzarella cheese come together in this comforting dish. It's perfect for a hearty family meal.</p>
+
     <h2>Ingredients</h2>
     <ul>
         <li>Lasagna noodles</li>
